# drevo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: windows-exe.yml
scripts/: build_windows.bat  build_windows.ps1
src/geneatree/: __init__.py  __main__.py  app.py
src/geneatree/model/: __init__.py  entities.py  storage.py  validation.py
src/geneatree/scene/: __init__.py  export_pdf.py  graphics_items.py  layout.py
src/geneatree/ui/: __init__.py  dialogs.py  main_window.py
tests/: test_layout.py  test_storage.py  test_validation.py
