[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geneatree"
version = "0.1.0"
description = "Desktop genealogy tree editor with PDF export"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "GeneaTree" }]
dependencies = [
  "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
geneatree = "geneatree.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["artifacts", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
